Fixed Overflow Scroll Issue Mobile

--- a/sass/partials/_about-me.scss
+++ b/sass/partials/_about-me.scss
@@ -44,7 +44,7 @@
 }
 
 html {
-    overflow: scroll;
+    // overflow: scroll;
 }
 
 @media (max-width: 480px) {
