--- a/sass/partials/_base-styles.scss
+++ b/sass/partials/_base-styles.scss
@@ -1,5 +1,8 @@
 html {
     background-color: black;
+}
+
+.room-html {
     overflow: hidden;
 }
 
