--- a/sass/partials/_media-queries.scss
+++ b/sass/partials/_media-queries.scss
@@ -390,7 +390,7 @@
 @media (max-width: 480px) {
     header {
         padding: 0px;
-        padding-bottom: 150px;
+        padding-bottom: 140px;
         background-image: none;
     }
 
